--- a/index.html
+++ b/index.html
@@ -6,166 +6,184 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-      <header class="main-header">
-          <div class="container">
-             <nav class="main-navigation">
-                 <div class="logo">
-                      <img src="img/index/logo.svg" alt="">
-                 </div>
-                 <ul class="main-menu">
-                      <li><a href="#">Каталог</a>
-                              <ul class="catalog-menu">
-                                  <li><a href="#" class="catalog-menu-new">Новинки</a></li>
-                                  <li><a href="catalog.html">Сливочное</a></li>
-                                  <li><a href="#">Щербеты</a></li>
-                                  <li><a href="#">Фруктовый лед</a></li>
-                                  <li><a href="#">Мелорин</a></li>
-                              </ul>
-                      </li>
-                      <li><a href="#">Доставка и оплата</a></li>
-                      <li><a href="#">О компании</a></li>
-                  </ul>
-              </nav>
-              <div class="search">
-                  <a href="#" class="search-icon">Поиск</a>
+     <div class="wrapper">
+          <header class="main-header">
+              <div class="container">
+                 <nav class="main-navigation clearfix">
+                     <div class="logo">
+                          <img src="img/index/logo.svg" alt="">
+                     </div>
+                     <ul class="main-menu">
+                          <li><a href="#">Каталог</a>
+                                  <ul class="catalog-menu">
+                                      <li><a href="#" class="catalog-menu-new">Новинки</a></li>
+                                      <li><a href="catalog.html">Сливочное</a></li>
+                                      <li><a href="#">Щербеты</a></li>
+                                      <li><a href="#">Фруктовый лед</a></li>
+                                      <li><a href="#">Мелорин</a></li>
+                                  </ul>
+                          </li>
+                          <li><a href="#">Доставка и оплата</a></li>
+                          <li><a href="#">О компании</a></li>
+                      </ul>
+                  </nav>
+                  <div class="user-block">
+                      <div class="search">
+                          <a href="#" class="search-icon">Поиск</a>
+                      </div>
+                      <div class="search-hover">
+                          <form action="#" method="get">
+                              <input type="search" name="search" placeholder="Что ищем?">
+                          </form>
+                      </div>
+                      <div class="user">
+                          <a href="#" class="login-icon">Вход</a>
+                      </div>
+                      <div class="user-hover">
+                          <form action="#" method="post">
+                              <input type="email" name="email" placeholder="Электронная почта">
+                              <input type="password" name="password" placeholder="Пароль">
+                              <input type="submit" name="login" value="Войти" class="button">
+                              <a href="#">Забыли пароль?</a>
+                              <a href="#">Новая регистрация</a>
+                          </form>
+                      </div>
+                      <div class="basket">
+                          <a href="#" class="basket-icon">Пусто</a>
+                      </div>
+                  </div>
+              </div>    
+          </header>
+          <main>
+              <div class="container">
+                  <div class="time">C 10 до 20, ежедневно
+                                    8 812 450 25 25
+                  </div>
+                  <div class="slider">
+                      <h1> Крем-брюле и пломбир 
+                           с малиновым джемом</h1>
+                      <a href="#" class="slider-button">Давайте оба!</a>
+                  </div>
+                  <div class="slider2">
+                      <h1> Шоколадный пломбир
+                           и лимонный сорбет </h1>
+                      <a href="#" class="slider-button">Давайте оба!</a>
+                  </div>
+                  <div class="slider3" disabled>
+                      <h1> Пломбир с помадкой
+                            и клубничный щербет</h1>
+                      <a href="#" class="slider-button">Давайте оба!</a>
+                  </div>
+                  <div class="stocks">
+                      <section class="stock stock-left clearfix">
+                          <h2>Малинка даром!</h2>
+                          <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
+                          <a href="#" class="button">Хочу варенье!</a>
+                      </section>
+                      <section class="stock stock-right">
+                          <h2>Шоколадки даром!</h2>
+                          <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
+                          <a href="#" class="button">Хочу шоколадки!</a>
+                      </section>
+                  </div>
+                  <div class="items">
+                      <article class="item hit-icon">
+                          <div class="item-top">
+                              <img src="img/index/1.png" alt="">
+                              <span class="price">310<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          </div>
+                          <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+                          <a href="#" class="button">Быстрый просмотр</a>
+                      </article>
+                      <article class="item hit-icon">
+                          <div class="item-top">
+                              <img src="img/index/2.png" alt="">
+                              <span class="price">380<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          </div>
+                          <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
+                          <a href="#" class="button">Быстрый просмотр</a>
+                      </article>
+                      <article class="item hit-icon">
+                         <div class="item-top">
+                              <img src="img/index/3.png" alt="">
+                              <span class="price">355<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          </div>
+                          <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
+                          <a href="#" class="button">Быстрый просмотр</a>
+                      </article>
+                      <article class="item hit-icon">
+                         <div class="item-top">
+                              <img src="img/index/4.png" alt="">
+                              <span class="price">415<img src="img/index/rub.svg"><span class="mass">/кг</span></span>
+                          </div>
+                          <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
+                          <a href="#" class="button">Быстрый просмотр</a>
+                      </article>
+                  </div>
+                  <div class="features clearfix">
+                      <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
+                      <div class="features-left">
+                          <div class="feature feature-ice-icon">
+                              <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
+                          </div>
+                          <div class="feature feature-nature-icon">
+                              <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
+                          </div>
+                      </div>
+                      <div class="features-right">
+                          <div class="feature feature-meat-icon">
+                              <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
+                          </div>
+                          <div class="feature feature-ship-icon">
+                              <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
+                          </div>
+                      </div>
+                  </div>
+                  <div class="news">
+                      <div class="news-block news-left">
+                          <span class="name">Новое в нашем блоге</span>
+                          <a href="#" class="news-title">10 способов сервировки фруктовых щербетов к столу</a>
+                      </div>
+                      <div class="news-block news-right">
+                          <p class="sub-text">Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
+                          <form action="#" method="post">
+                              <input type="email" placeholder="Электронная почта" id="email">
+                              <input type="submit" value="Отправить" class="button">
+                          </form>
+                      </div>
+                  </div>
               </div>
-              <div class="search-hover">
-                  <form action="#" method="get">
-                      <input type="search" name="search" placeholder="Что ищем?">
-                  </form>
+              <div class="map">
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5991043705241!2d30.320889251850033!3d59.93879418178723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1471539736899" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen></iframe>
               </div>
-              <div class="user">
-                  <a href="#" class="login-icon">Вход</a>
-              </div>
-              <div class="user-hover">
-                  <form action="#" method="post">
-                      <input type="email" name="email" placeholder="Электронная почта">
-                      <input type="password" name="password" placeholder="Пароль">
-                      <input type="submit" name="login" value="Войти" class="button">
-                      <a href="#">Забыли пароль?</a>
-                      <a href="#">Новая регистрация</a>
-                  </form>
-              </div>
-              <div class="basket">
-                  <a href="#" class="basket-icon">Пусто</a>
-              </div>
-          </div>    
-      </header>
-      <main>
-          <div class="container">
-              <div class="time">C 10 до 20, ежедневно
-                                8 812 450 25 25
-              </div>
-              <div class="slider">
-                  <h1> Крем-брюле и пломбир 
-                       с малиновым джемом</h1>
-                  <a href="#" class="slider-button">Давайте оба</a>
-              </div>
-              <div class="slider2">
-                  <h1> Шоколадный пломбир
-                       и лимонный сорбет </h1>
-                  <a href="#" class="slider-button">Давайте оба</a>
-              </div>
-              <div class="slider3" disabled>
-                  <h1> Пломбир с помадкой
-                        и клубничный щербет</h1>
-                  <a href="#" class="slider-button">Давайте оба</a>
-              </div>
-              <div class="stocks">
-                  <section class="stock stock-left">
-                      <h2>Малинка даром</h2>
-                      <p>При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно</p>
-                      <a href="#" class="button">Хочу варенье!</a>
+          </main>
+          <footer class="main-footer">
+             <div class="container clearfix">
+                  <section class="social">
+                      <a href="#" class="social-btn social-btn-tw">Твиттер</a>
+                      <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
+                      <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
+                      <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
                   </section>
-                  <section class="stock stock-right">
-                      <h2>Шоколадки даром</h2>
-                      <p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-                      <a href="#" class="button">Хочу шоколадки!</a>
+                  <section class="footer-menu">
+                      <div class="footer-menu-left">
+                          <a href="#">Для поставщиков</a>
+                          <a href="#">О производстве</a>
+                      </div>
+                      <div class="footer-menu-right">
+                          <a href="#">Наши документы</a>
+                          <a href="#">Экологические стандарты</a>
+                      </div>
+                  </section>
+                  <section class="html-academy">
+                      <div class="html-academy-content">
+                      <img src="img/index/htmlacademy.svg" alt="logo">
+                      <span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span> 
+                      </div>
                   </section>
               </div>
-              <div class="items">
-                  <article class="item hit-icon">
-                      <img src="img/index/1.png" alt="">
-                      <span class="price">310<img src="img/index/rub.svg">/кг</span>
-                      <a href="#" class="goods-title">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
-                      <a href="#" class="button">Быстрый просмотр</a>
-                  </article>
-                  <article class="item hit-icon">
-                      <img src="img/index/2.png" alt="">
-                      <span class="price">380<img src="img/index/rub.svg">/кг</span>
-                      <a href="#" class="goods-title">Сливочно-кофейное с кусочками шоколада</a>
-                      <a href="#" class="button">Быстрый просмотр</a>
-                  </article>
-                  <article class="item hit-icon">
-                      <img src="img/index/3.png" alt="">
-                      <span class="price">355<img src="img/index/rub.svg">/кг</span>
-                      <a href="#" class="goods-title">Сливочно-клубничное с присыпкой из белого шоколада</a>
-                      <a href="#" class="button">Быстрый просмотр</a>
-                  </article>
-                  <article class="item hit-icon">
-                      <img src="img/index/4.png" alt="">
-                      <span class="price">415<img src="img/index/rub.svg">/кг</span>
-                      <a href="#" class="goods-title">Сливочное крем-брюле с карамельной подливкой</a>
-                      <a href="#" class="button">Быстрый просмотр</a>
-                  </article>
-              </div>
-              <div class="features">
-                  <h3>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</h3>
-                  <div class="features-left">
-                      <div class="feature feature-ice-icon">
-                          <p>Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</p>
-                      </div>
-                      <div class="feature feature-nature-icon">
-                          <p>Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</p>
-                      </div>
-                  </div>
-                  <div class="features-right">
-                      <div class="feature feature-meat-icon">
-                          <p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
-                      </div>
-                      <div class="feature feature-ship-icon">
-                          <p>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</p>
-                      </div>
-                  </div>
-              </div>
-              <div class="news">
-                  <div class="news-left">
-                      <span class="news">Новое в нашем блоге</span>
-                      <a href="#" class="news-title">10 способов сервировки фруктовых щербетов к столу</a>
-                  </div>
-                  <div class="news-right">
-                      <p>Подпишись на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно =)</p>
-                      <form action="#" method="post">
-                          <input type="email" placeholder="Электронная почта" id="email">
-                          <input type="submit" value="Отправить" class="button">
-                      </form>
-                  </div>
-              </div>
-          </div>
-          <div class="map">
-              <img src="img/index/map.jpg" alt="">
-          </div>
-      </main>
-      <footer>
-         <div class="container">
-              <section class="social">
-                  <a href="#" class="social-btn social-btn-tw">Твиттер</a>
-                  <a href="#" class="social-btn social-btn-inst">Инстаграм</a>
-                  <a href="#" class="social-btn social-btn-fb">Фейсбук</a>
-                  <a href="#" class="social-btn social-btn-vk">Вконтакте</a>
-              </section>
-              <section class="footer-menu">
-                  <a href="#">Для поставщиков</a>
-                  <a href="#">О производстве</a>
-                  <a href="#">Наши документы</a>
-                  <a href="#">Экологические стандарты</a>
-              </section>
-              <section class="html-academy">
-                  <img src="img/index/htmlacademy.svg" alt="logo">
-                  <span class="made">Сделано в <a href="#">HTML Academy</a> © 2016</span> 
-              </section>
-          </div>
-      </footer>
+          </footer>
+      </div>
       <div class="feedback">
          <span class="feedback-title">Мы обязательно вам ответим!</span>
           <form action="#" method="get">
